# fields

./: .envrc  .gitignore  .replit  config.json  exampleconfig.json  flake.nix  pyproject.toml  readme.md  requirements-linux.txt  requirements-windows.txt
fields/: __main__.py  server.py
src/fields/: __main__.py  bot.py
